name:                angle
version:             1.0.0.0
synopsis:            Library for calculating with angles in a type-safe manner.
description:         Library for calculating with angles in a type-safe manner.
homepage:            https://github.com/TobiasBengtsson/angle
license:             BSD3
license-file:        LICENSE
author:              Tobias Bengtsson
maintainer:          bo.tobias.bengtsson@gmail.com
copyright:           2018 Tobias Bengtsson
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Angle
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/TobiasBengtsson/angle

test-suite angle-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      angle
    , base >=4.7 && <5
    , random ==1.1
    , tasty ==0.11.3
    , tasty-quickcheck ==0.8.4
  default-language: Haskell2010
