name:                angle
version:             1.0.0.0
synopsis:            Library for calculating with angles in a type-safe manner.
description:         Angle is a library for calculating with angles in a
                     type-safe manner. The difference between this library
                     and other libraries dealing with angles is that here
                     they are treated in a representation-independent manner
                     from the outside. You can create an angle from any
                     representation you want (degrees, radians currently
                     supported) and perform operations on those angles. You
                     can perform binary operations on angles created from
                     different representations and it will still build and
                     work. Finally, when you want to get the angle in a
                     representation of your choice you can call getDegrees
                     or getRadians.
homepage:            https://github.com/TobiasBengtsson/angle
license:             BSD3
license-file:        LICENSE
author:              Tobias Bengtsson
maintainer:          bo.tobias.bengtsson@gmail.com
copyright:           2018 Tobias Bengtsson
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Angle
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/TobiasBengtsson/angle

test-suite angle-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      angle
    , base >=4.7 && <5
    , random ==1.1
    , tasty ==0.11.3
    , tasty-quickcheck ==0.8.4
  default-language: Haskell2010
